assets/styles/_buttons.scss
//buttons
.btn-like,
.btn:not(.btn-menu) {
    text-transform: uppercase;
}

.btn,
.btn-like //class that looks like button but does not include hover, focus and active
{
    text-align: center;
    color: var(--#{$prefix}body-color);
    @extend .ff-grotesk;
    @extend .text-decoration-none;
    @extend .d-inline-block;
    border-radius: 9999px;
    border-style: solid;
    font-size: 0.9rem;
    border-width: 2px;
    line-height: 1;
    $btn-padding-y: 1.2em;
    white-space: nowrap;
    padding: $btn-padding-top $btn-padding-y $btn-padding-bottom $btn-padding-y;
    transition: $link_transition_speed linear;
}


.btn-block {
    @extend .d-block;
    width: 100%;
}
.btn,
.btn-menu {
    svg {
        &.icon-square {
            transition: $link_transition_speed linear;
            margin-top: -0.13em;
        }
    }
}

.btn {
    &:disabled {
        background-color: var(--#{$prefix}secondary);
        border-color: var(--#{$prefix}secondary);
        color: var(--#{$prefix}gray);
    }
}

.btn-sm {
    font-size: $small-font-size;
}
.btn-primary {
    background-color: var(--#{$prefix}primary);
    border-color: var(--#{$prefix}primary);
}
.btn-white {
    background-color: var(--#{$prefix}white);
    border-color: var(--#{$prefix}white);
}
.btn-secondary {
    background-color: var(--#{$prefix}secondary);
    border-color: var(--#{$prefix}secondary);
}
.btn-outline {
    background-color: var(--#{$prefix}white);
    border-color: var(--#{$prefix}body-color);
    //when btn class used for filter/page selection
    &:not(:focus):not(:hover):not(:active):not(:focus-visible).active {
        background-color: var(--#{$prefix}primary);
    }
}


.btn-link {
    background-color: transparent !important;
    border-color: transparent !important;
}
.btn-red {
    background-color: var(--#{$prefix}red);
    border-color: var(--#{$prefix}red);
    color: $white;
}
.btn-black {
    background-color: var(--#{$prefix}black);
    border-color: var(--#{$prefix}black);
    color: $white;
}

.btn {
    &:hover:not(:disabled),
    &:focus-visible,
    &:focus {
        background-color: var(--#{$prefix}red) !important;
        border-color: var(--#{$prefix}red) !important;
        color: $white;
        outline: none !important;
    }
    &:active:not(:disabled) {
        color: $white;
        background-color: darken($red, 10) !important;
        border-color: darken($red, 10) !important;
    }

    &.btn-red {
        &:hover:not(:disabled),
        &:focus-visible {
            background-color: var(--#{$prefix}primary) !important;
            color: var(--#{$prefix}body-color);
            border-color: var(--#{$prefix}body-color) !important;
        }
        &:active:not(:disabled) {
            background-color: darken($primary, 7) !important;
            border-color: darken($primary, 7) !important;
        }
    }
}

.btn.btn-close {
    width: 4rem;
    height: 4rem;
    line-height: 3rem;
    padding: 0px;
    svg {
        width: 2rem;
        height: 2rem;
    }
    background: transparent !important;
    border-color: transparent !important;
    &:hover:not(:disabled),
    &:focus-visible,
    &:focus {
        outline: none !important;
        background: transparent !important;
        border: transparent !important;
        color: var(--#{$prefix}red)
    }
}

.bg-primary,
.has-primary-background-color {
    button,
    a {
        &.btn-red {
            &:hover,
            &:focus-visible {
                background-color: var(--#{$prefix}white) !important;
                border-color: var(--#{$prefix}body-color) !important;
                color: var(--#{$prefix}body-color);
            }
        }
    }
}

.bg-red,
.has-red-background-color {
    button,
    a {
        &.btn{
            &:hover,
            &:focus-visible {
                    background-color: var(--#{$prefix}primary) !important;
                    border-color: var(--#{$prefix}primary) !important;
                    color: var(--#{$prefix}body-color);
            }
        }
       
        &.btn-red {
            &:hover,
            &:focus-visible {
                background-color: var(--#{$prefix}white) !important;
                border-color: var(--#{$prefix}body-color) !important;
                color: var(--#{$prefix}body-color);
            }
        }
    }
}

